springk8s/spring-clients-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-clients
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-clients
  template:
    metadata:
      labels:
        app: spring-clients
    spec:
      serviceAccountName: spring-cloud-kubernetes-sa  # Added
      containers:
        - name: spring-clients
          image: spring-clients:1.0.0
          ports:
            - containerPort: 8080  # Changed to match service

---
apiVersion: v1
kind: Service
metadata:
  name: spring-clients-service
spec:
  selector:
    app: spring-clients
  ports:
    - port: 8080
      targetPort: 8080  # Simplified
