springk8s/spring-clients-develop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-clients-develop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-clients-develop
  template:
    metadata:
      labels:
        app: spring-clients-develop
    spec:
      serviceAccountName: spring-cloud-kubernetes-sa  # Added
      containers:
        - name: spring-clients-develop
          image: spring-clients-develop:1.0.0
          ports:
            - containerPort: 8081

---
apiVersion: v1
kind: Service
metadata:
  name: spring-clients-develop-service
spec:
  selector:
    app: spring-clients-develop
  ports:
    - port: 8081
      targetPort: 8081
